--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "lodash.throttle": "^4.1.1",
-    "vue": "^2.6.11"
+    "sass": "^1.52.3",
+    "sass-loader": "^10.0.0",
+    "vue": "^2.6.11",
+    "vue-draggable-resizable": "^2.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
